<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/bk_all">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        tools:ignore="UselessParent">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:text="@string/Confirmation_ui"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:text="@string/Load_ui"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <ListView
            android:id="@+id/ClientList"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:background="#90DA90"
            tools:ignore="ScrollViewSize" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:text="@string/Waste_ui"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <ListView
            android:id="@+id/WasteList"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:background="#90DA90"
            tools:ignore="ScrollViewSize" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:text="@string/Purchase_ui"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <ListView
            android:id="@+id/PurchaseList"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:background="#90DA90"
            tools:ignore="ScrollViewSize" />










    </LinearLayout>
</LinearLayout>