<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Record">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/bk_all">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textColor="@color/black"
            android:text="@string/Record_ui"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="@string/text2"
                android:textColor="@color/black"
                android:textSize="11sp" />

            <EditText
                android:id="@+id/c_name"
                android:layout_width="280dp"
                android:layout_height="match_parent"
                android:background="@color/bkc"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColor="@color/black"
                tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        </LinearLayout>

        <Button
            android:id="@+id/OK_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/OK_btn"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>